# INF8775-TP3

./: .gitignore  CMakeLists.txt  README.md  build.py  sol.txt  tp.sh
config/: colors
data/: inst_gen.py
src/: algorithm.hpp  algorithms.cpp  algorithms.hpp  alogrithms.cpp  block.cpp  coord.cpp  main.cpp  renderer.cpp  renderer.hpp  structures.cpp  structures.hpp  utils.cpp  utils.hpp
